--- a/ARKit/packages.config
+++ b/ARKit/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.8.0" targetFramework="net461" />
   <package id="EMGU.CV" version="3.4.3.3016" targetFramework="net461" />
+  <package id="MathNet.Numerics" version="4.7.0" targetFramework="net461" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net461" />
 </packages>
